@@ -82,6 +82,7 @@ version 2.0.0:
 	* Changed: "chat-invited" handlers can now return a value to control
 	           what happens to the invite (accept, reject, prompt the user).
 	           See the Doxygen documentation for the details.
+	* Added:   gtk_imhtml_delete to clear out part of a imhtml buffer
 
 version 1.0.0 (09/17/2004):
 	* Added: get_chat_name to the GaimPluginProtocolInfo struct
